@@ -1894,6 +1894,9 @@ switch (areg) {
 		printf("%c", xreg);
 		fflush(stdout);
 		break;
+	case 106:
+		sdl_mouse_onoff(xreg & 0x7);
+		break;
 	case 112:
 		osbyte112(xreg);
 		break;
@@ -1924,10 +1927,12 @@ switch (areg) {
 		if (areg < 0xFFFF)	return (areg << 8) | 132;
 		else			return ((areg & 0xFF0000) >> 16) | ((areg & 0xFFFF) << 8);
 
-//	case 133:		// OSBYTE 133 - Read screen start for MODE - inapplicable?
+//	case 133:		// OSBYTE 133 - Read screen start for MODE - not implemented in RISC OS.
 	case 134:		// OSBYTE 134 - Read POS and VPOS
 	case 165:		// Identical, since we don't have an editing cursor
 		return osbyte134_165(areg);
+	case 135:
+		return osbyte135();
 	case 160:		// OSBYTE 160 - Read VDU variable
 		return emulate_vdufn(xreg) << 8 | 160;
 	case 163:		// OSBYTE 163 - Application Support.
@@ -1967,7 +1972,7 @@ switch (areg) {
 		break;
 
 	}
-if (areg <= 25 || (areg >= 40 && areg <= 43) || areg >= 112) 
+if (areg <= 25 || (areg >= 40 && areg <= 43) || areg >= 106) 
 	return (0 << 30) | (yreg << 16) | (xreg << 8) | areg;	// Default null return
 else
 	return (3 << 30) | (yreg << 16) | (0xFF00) | areg;		// Default null return
