@@ -121,3 +121,5 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
   BBC-style call to &FFF1.
 - OSBYTEs 134 and 165 implemented. As Brandy doesn't have the Acorn-style
   editing cursor, these two function identically.
+- OSBYTEs 106 and 135 implemented partially (135 only complete in MODE 7),
+  106 can only turn the pointer on or off.
